# beach-render

./: .gitignore  CMakeLists.txt  README.md  learn.md
background/: cubemap.h  framebuffer.h  light.fs  light.h  light.vs  ocean_fft_baker.h  scene.h  skybox.fs  skybox.h  skybox.vs  terrain.fs  terrain.h  terrain.vs  water.fs  water.vs  waterplane.h  waterplane_baked.h  waterplane_gerstner.h
docs/: 22355082-王宇和.md  23320143-唐雅妍.md  R-TeamProject.md  实验报告.md
image/sand_03_4k.blend/: sand_03_4k.blend
include/: framebuffer.h
include/glad/: glad.h
include/myinclude/: FileSystem.h  camera.h  cubemap.h  mesh.h  skybox.h  texture.h
model/: beach_table.glb  cube.h  gameobject.h  model.h  model_loading.fs  model_loading.vs  orca.glb  test_assimp.cpp
model/cover-chair/: Cover_Chair.mtl
src/: generate_hm.py  glad.c  gouraud_obj.fs  gouraud_obj.vs  main.cpp  main1.cpp  obj.fs  obj.vs
utils/: render.h  shadowmap.h
